[package]

name = "keepass"
version = "0.0.1"
authors = ["GrayFox <grayfox@outerhaven.de>", "Jan S. <hans@hannover.ccc.de>"]

[lib]

name = "keepass"
path = "src/lib.rs"

test = true
doctest = true
doc = true

[dependencies.openssl]

git = "https://github.com/sfackler/rust-openssl.git"

[dependencies]

rustc-serialize = "0.2"
rand = "0.1"
chrono = "0.2"