[package]

name = "keepass"
version = "0.0.1"
authors = ["GrayFox <grayfox@outerhaven.de>", "Jan S. <hans@hannover.ccc.de>"]

[lib]

name = "keepass"
path = "src/lib.rs"

test = true
doctest = true
doc = true

[dependencies]

rustc-serialize = "0.3"
libc = "0.1.10"
rand = "0.3"
chrono = "0.2"
uuid = "0.1"
openssl = "0.6.6"

