[package]

name = "keepass"
version = "0.0.1"
authors = ["GrayFox <grayfox@outerhaven.de>", "Jan S. <hans@hannover.ccc.de>"]

[lib]

name = "keepass"
path = "src/lib.rs"

test = true
doctest = true
doc = true

[dependencies]

rustc-serialize = "*"
libc = "*"
rand = "*"
chrono = "*"
uuid = { version = "*", features = ["v4"] }
openssl = "*"

